<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  android:background="@drawable/main"
    android:layout_gravity="center"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn1"
        android:layout_width="150dp"
        android:layout_height="60dp"
android:layout_marginBottom="10dp"
        android:text="@string/txt2"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        />
    <Button
        android:id="@+id/btn2"
        android:layout_width="150dp"
        android:layout_height="60dp"
       android:backgroundTint="@color/black"
        android:text="@string/txt1"
        android:layout_marginStart="100dp"
        android:textColor="@color/white"
         />

    <Button
        android:id="@+id/btn3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/txt3"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="10dp"
        android:bottomLeftRadius="40dp"
        android:bottomRightRadius="7dp"
        android:topLeftRadius="7dp"
        android:topRightRadius="7dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/txt8"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="100dp"
        android:textStyle="bold" />


    <FrameLayout

        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="700dp"
        android:layout_marginTop="20dp"
        />


</LinearLayout>